--- a/model/project.yaml
+++ b/model/project.yaml
@@ -19,5 +19,5 @@ project:
       ../../../mvn-repo
     remote:
     - https://github.com/nabla-squared/mvn-repo
-  template_files:
-  - 'dest/template'
+#  template_files:
+#  - 'dest/template'
